# libvna

./: .gitignore  Makefile.am  README  README-BUILD.md  README-DEVELOPMENT.md  README-EXAMPLES  TODO  bootstrap  configure.ac
.github/workflows/: c.yml  release.yml  test-manylinux.yml  test-ubuntu.yml  test-windows.yml  test.yml
deb/: Makefile.am
debian/: Makefile.am  changelog  control  copyright  libvna-dev.dirs  libvna-dev.docs  libvna-dev.examples  not-installed  postrm_run
package/: Makefile.am
package/deb/: Makefile.am
package/pkg/: Makefile.am  PKGBUILD.in
package/rpm/: Makefile.am
rpm/: Makefile.am  libvna.spec.in
src/: BFCV-4085+_Plus25DegC.s2p  Makefile.am  MwT-1F.s2p  TODO  archdep.c  archdep.h  convert-parameters.c  libvna.pc.in  vnacal-SOLT-example.c  vnacal-SOLT-example.gnuplot  vnacal-TRL-example.c  vnacal-TRL-example.gnuplot  vnacal-TSD-example.c  vnacal-TSD-example.gnuplot  vnacal-example.c  vnacal-example.gnuplot  vnacal-test.c  vnacal.3  vnacal.h  vnacal_add_calibration.c  vnacal_apply.c  vnacal_apply_alloc.c  vnacal_build_error_term_list.c  vnacal_calibration.c  vnacal_calset.c  vnacal_create.c  vnacal_delete_calibration.c  vnacal_delete_parameter.c  vnacal_delete_parameter_matrix.c  vnacal_error.c  vnacal_etermset.c  vnacal_eval_parameter.c  vnacal_eval_parameter_matrix.c  vnacal_eval_parameter_matrix_i.c  vnacal_find_calibration.c  vnacal_free.c  vnacal_get.c  vnacal_get_parameter_value.c  vnacal_get_z0_vector.c  vnacal_input.c  (+297 more)
src/tests/: Makefile.am  compat-V2.vnacal  libt.c  libt.h  libt_crand.c  libt_crand.h  libt_vnacal.h  libt_vnacal_calibration.c  libt_vnacal_measurements.c  libt_vnacal_properties.c  libt_vnacal_standards.c  libt_vnacal_terms.c  libt_vnadata.h  libt_vnadata_convert.c  libt_vnadata_create.c  test-vnacal-SOLT.c  test-vnacal-Silvonen16.c  test-vnacal-TRL.c  test-vnacal-Van-hamme.c  test-vnacal-apply.c  test-vnacal-compat-V2.c  test-vnacal-pvalue.c  test-vnacal-random.c  test-vnacal-save-load.c  test-vnacal-standards.c  test-vnacal-v-matrices.c  test-vnacommon-lu.c  test-vnacommon-minverse.c  test-vnacommon-mldivide.c  test-vnacommon-mrdivide.c  test-vnacommon-qr.c  test-vnacommon-qrd.c  test-vnacommon-qrsolve-q.c  test-vnacommon-qrsolve.c  test-vnacommon-qrsolve2.c  test-vnaconv-2x2.c  test-vnaconv-3x3.c  test-vnaconv-renormalize-2x2.c  test-vnaconv-renormalize-NxN.c  test-vnadata-basic.c  (+14 more)
tools/: examples-msvc.diffs  make-rpm  make-windows-zip
